# embed_entitlements

./: Cargo.toml  README.md  keychain.entitlements
.cargo/: config.toml  sim-runner.sh
.github/workflows/: ci.yml
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: simple.entitlements.der  simple.rs  ui.rs
macro/tests/ui/: bad_syntax.rs  bad_syntax.stderr  not_found.rs  not_found.stderr
src/: lib.rs
tests/: binary_inspection.rs
