[package]
name = "embed_entitlements_macro"
version = "0.1.0"
description = "Helper proc-macro for the `embed_entitlements` crate"
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/madsmtm/embed_entitlements"
license = "Zlib OR Apache-2.0 OR MIT"

[lib]
proc-macro = true

[features]
pure = ["dep:plist", "dep:apple-codesign"]

[dependencies]
litrs = "1.0.0"
plist = { version = "1.8.0", optional = true, default-features = false }
apple-codesign = { version = "0.29.0", optional = true, default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
plist = { version = "1.8.0", default-features = false }
apple-codesign = { version = "0.29.0", default-features = false }

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]

[target.'cfg(target_os = "macos")'.dev-dependencies]
trybuild = "1.0.116"
